docs/releases/1.1/readiness/COMPLETION-REPORT.md
# APZHUB-1.1-005 — Completion Report

> **Programme:** APZHUB-1.1-005  
> **Title:** Release 1.1 Readiness Review & Certification Planning  
> **Classification:** DOCUMENTATION + READINESS REVIEW  
> **Status:** Complete — **Awaiting Acceptance**  
> **Date:** 2026-07-20  
> **Standard:** [Platform Delivery Standard](../../../engineering/platform-delivery/PLATFORM-DELIVERY-STANDARD.md)

---

## Prerequisites closed

| Prerequisite                              | Status                                                   |
| ----------------------------------------- | -------------------------------------------------------- |
| APZHUB-1.1-004                            | **ACCEPTED** (Owner Decision authorising this programme) |
| Planned Release 1.1 engineering (001–004) | Complete per Owner Decision                              |
| Platform 1.0.0 Production Baseline        | Held                                                     |

---

## Delivered (documentation only)

1. Release 1.1 Readiness Assessment
2. Executive Summary
3. Scope Summary
4. Quality Summary
5. Risk Assessment
6. Updated Known Limitations Register (Release 1.1)
7. This Completion Report + Acceptance Report
8. Register updates (AI-MANIFEST · Owner register · CURRENT-* · platform KL rows · CHANGELOG)

**No code · no package changes · no builds · no tests** (none required — no verification gap blocking readiness).

---

## Recommendation filed

# READY FOR RELEASE 1.1 CERTIFICATION

---

## Not delivered (explicit STOP)

| Item                              | Status                                                    |
| --------------------------------- | --------------------------------------------------------- |
| Platform 1.1.0 certification pack | Not started — next Owner-approved certification programme |
| Release 1.2                       | Not started                                               |
| Email SoR                         | Not started                                               |
| FIN-001                           | Not started                                               |
| Workflow execute unlock           | Not started                                               |
| Any engineering implementation    | Not authorised                                            |

---

## Recommendation

# READY FOR OWNER ACCEPTANCE

_(programme acceptance of this readiness review)_

Certification recommendation for the release itself:

# READY FOR RELEASE 1.1 CERTIFICATION
